Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-52058 memcached hangs when no password is passed for encrypted private key
  3. MB-52248

[BP 7.1.1]: memcached hangs when no password is passed for encrypted private key

    XMLWordPrintable

Details

    • 1

    Description

      We should backport the fix for MB-52058 to 7.1.1, as otherwise it is possible that memcached will hang if an empty password is returned by the external script responsible for providing the cert password.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dfinlay Dave Finlay
            dfinlay Dave Finlay
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty