MB-52248: [BP] Allow for empty password for encrypted cert

If ns_server provided an encrypted cert without a password
to decode it we would try to read the password from stdin.

This patch fix this by returning an empty password (and
fail the password check).

Change-Id: Ib3747faef4b7e8097dd5ef32ad84271a48822171
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/175153
Well-Formed: Restriction Checker
Reviewed-by: Jim Walker <jim@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>